--- a/Demo.MenuLoad/Views/Shared/_Layout_SignIn.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Layout_SignIn.cshtml
@@ -47,6 +47,9 @@
     <script src="~/Scripts/toastr.min.js"></script>
     <!-- Ui - Toaster -->
     <script src="~/Scripts/ui-toastr.min.js"></script>
+    <!-- Static URL for whole project -->
+    <script src="~/Controllers/Scripts/staticContent.js"></script>
+
     <script>
         $(document).ready(function () {
             $('input').iCheck({
