--- a/Demo.MenuLoad/Views/Shared/_Layout_SignIn.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Layout_SignIn.cshtml
@@ -64,7 +64,7 @@
 <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
 <script>
     window.onLoadCallback = function(){
-        gapi.load('client:auth2', initClientOut);
+        gapi.load('client:auth2', initClient);
     }
 </script>
 </body>
