Add dynamic meal and Enable multipale migration system

--- a/Demo.MenuLoad/Views/Home/Index.cshtml
+++ b/Demo.MenuLoad/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             <span class="info-box-icon bg-blue"><i class="fa fa-cutlery"></i></span>
             <div class="info-box-content box-content-center">
                 <span class="info-box-number">Todays Meal</span>
-                <span class="info-box-text"><small>Rice, Dal,Chicken Masala, Salad</small></span>
+                <span class="info-box-text"><small id="mealSpan">Meal</small></span>
             </div>
             <!-- /.info-box-content -->
         </div>
@@ -333,6 +333,8 @@
     <script src="~/Scripts/jquery-ui.min.js"></script>
     <script src="~/Scripts/bootstrap3-wysihtml5.all.min.js"></script>
     <script src="~/Scripts/dashboard.js"></script>
+
+    <script src="~/Controllers/Scripts/mealController.js"></script>
 
     <script>
         function GetLoginUrl() {
