--- a/Demo.MenuLoad/Views/Shared/_Layout_SignIn.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Layout_SignIn.cshtml
@@ -19,66 +19,109 @@
     <!-- Theme style -->
     <link rel="stylesheet" href="~/Content/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
+    folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/Content/blue.css">
     <link rel="stylesheet" href="~/Content/toastr.min.css">
 
     <link rel="stylesheet" href="~/Content/Site.css">
 
+    <link rel="stylesheet" href="~/Content/myCss.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 <body class="hold-transition login-page">
+
+<div class="loader centered"></div>
+<div id="myContainer" style="display: none">
     @RenderBody()
+</div>
 
-    <!-- jQuery 3 -->
-    <script src="~/Scripts/jquery.min.js"></script>
-    <!-- Bootstrap 3.3.7 -->
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <!-- iCheck -->
-    <script src="~/Scripts/icheck.min.js"></script>
-    <!-- Toaster -->
-    <script src="~/Scripts/toastr.min.js"></script>
-    <!-- Ui - Toaster -->
-    <script src="~/Scripts/ui-toastr.min.js"></script>
-    <!-- Static URL for whole project -->
-    <script src="~/Controllers/Scripts/staticContent.js"></script>
-    <!-- Static Function for whole project -->
-    <script src="~/Controllers/Scripts/StaticFunction.js"></script>
+<!-- jQuery 3 -->
+<script src="~/Scripts/jquery.min.js"></script>
+<!-- Bootstrap 3.3.7 -->
+<script src="~/Scripts/bootstrap.min.js"></script>
+<!-- iCheck -->
+<script src="~/Scripts/icheck.min.js"></script>
+<!-- Toaster -->
+<script src="~/Scripts/toastr.min.js"></script>
+<!-- Ui - Toaster -->
+<script src="~/Scripts/ui-toastr.min.js"></script>
+<!-- Static URL for whole project -->
+<script src="~/Controllers/Scripts/staticContent.js"></script>
+<!-- Static Function for whole project -->
+<script src="~/Controllers/Scripts/StaticFunction.js"></script>
 
-    <script>
-        $(document).ready(function () {
-            $('input').iCheck({
-                checkboxClass: 'icheckbox_square-blue',
-                radioClass: 'iradio_square-blue',
-                increaseArea: '20%' /* optional */
-            });
-        })
-    </script>
-
-    @RenderSection("scripts", false)
-    <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
 <script>
-    window.onLoadCallback = function () {
-        gapi.load('client:auth2', initClient);
-    }
+    $(document).ready(function() {
+        $('.loader').fadeOut();
+        $('#myContainer').fadeIn();
+        $('input').iCheck({
+            checkboxClass: 'icheckbox_square-blue',
+            radioClass: 'iradio_square-blue',
+            increaseArea: '20%' /* optional */
+        });
+    })
 </script>
 
-    @*App deafult Auth*@
-    <script src="~/Controllers/Scripts/AppAuth.js"></script>
+@RenderSection("scripts", false)
+@*<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
+<meta name="google-signin-client_id" content="527506972274-etnt0ndgdelr2t372eofmoqhvum12abn.apps.googleusercontent.com">
+<script>
+    window.onLoadCallback = function() {
+        gapi.load('client:auth2', initClient);
+    }
+</script>*@
+<script src="https://apis.google.com/js/client:platform.js?onload=startApp" async defer></script>
+<script>
+    function startApp() {
+        gapi.load('auth2', function () {
+            gapi.client.load('plus', 'v1').then(function () {
+                gapi.signin2.render('signin-button', {
+                    scope: 'profile',
+                    fetch_basic_profile: false
+                });
+                gapi.auth2.init({
+                    fetch_basic_profile: false,
+                    client_id: '527506972274-etnt0ndgdelr2t372eofmoqhvum12abn.apps.googleusercontent.com',
+                    scope: 'profile'
+                }).then(function () {
+                    console.log('init');
+                    auth2 = gapi.auth2.getAuthInstance();
+                    auth2.isSignedIn.listen(function () {
+                        var user = auth2.currentUser.get();
+                        console.log("Listen");
+                        console.log(user);
+                        var isAuthorized = user.hasGrantedScopes(SCOPE);
+                        console.log("isAuthorized: " + isAuthorized);
+                        if (isAuthorized) {
+                            checkUserExistsByEmai(user["w3"]["U3"], user["Zi"]["access_token"]);
+                        }
+                    });
+                    auth2.then(function (resp) {
+                        console.log("Non Listen");
+                        console.log(auth2.currentUser.get());
+                    });
+                });
+            });
+        });
+    }
+</script>
+@*App deafult Auth*@
+<script src="~/Controllers/Scripts/AppAuth.js"></script>
 
-    @*gmail Auth*@
-    <script async defer src="https://apis.google.com/js/api.js"></script>
+@*gmail Auth*@
+<script async defer src="https://apis.google.com/js/api.js"></script>
 
-    <script src="~/Controllers/Scripts/gmailAuth.js"></script>
+<script src="~/Controllers/Scripts/gmailAuth.js"></script>
 
-    @*facebook Auth*@
-    <script src="~/Controllers/Scripts/facebookAuth.js"></script>
+@*facebook Auth*@
+<script src="~/Controllers/Scripts/facebookAuth.js"></script>
 </body>
 </html>
