--- a/Demo.MenuLoad/Views/Home/Leave.cshtml
+++ b/Demo.MenuLoad/Views/Home/Leave.cshtml
@@ -5,7 +5,7 @@
 
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title"><i class="fa fa-tag"></i> Leave </h3>
+        <h3 class="box-title"><i class="fa fa-tag"></i> Leave Entry</h3>
         <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse">
                 <i class="fa fa-minus"></i>
