leave type update complete

--- a/Demo.MenuLoad/Views/LeaveType/Index.cshtml
+++ b/Demo.MenuLoad/Views/LeaveType/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Leave Type";
 }
 
+<input type="hidden" id="leaveTypeId"/>
 <div class="box box-default">
     <div class="box-header with-border">
         <h3 class="box-title"><i class="fa fa-tag"></i> Leave Type Entry</h3>
