--- a/Demo.MenuLoad/Content/myCss.css
+++ b/Demo.MenuLoad/Content/myCss.css
@@ -37,3 +37,6 @@
     height: 100%; /* Full height */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+table.dataTable tbody tr.selected {
+    background-color: #B0BED9;
+}
