--- a/Demo.MenuLoad/Views/LeaveType/Index.cshtml
+++ b/Demo.MenuLoad/Views/LeaveType/Index.cshtml
@@ -17,15 +17,15 @@
     <!-- /.box-header -->
     <div class="box-body">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <label>Leave Type Name</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="leaveTypeName">
+                        <input type="text" class="form-control" id="leaveTypeName" placeholder="Leave Type Name">
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <label>Applicable For</label>
                     <div class="input-group">
@@ -37,54 +37,49 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <label>Company Policy</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="companyPolicy">
+                        <input type="text" class="form-control" id="companyPolicy" placeholder="Day for this leave">
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <label>Max Allowed At A Time</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="maxAllowedAtATime">
+                        <input type="text" class="form-control" id="maxAllowedAtATime" placeholder="Maximum allowed per apply">
                     </div>
                 </div>
             </div>
-
-        </div>
-        <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6 col-xs-6">
                 <div class="form-group">
                     <label>Max Application At A Month</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="maxApplicationAtAMonth">
+                        <input type="text" class="form-control" id="maxApplicationAtAMonth" placeholder="Maximum allowed per month">
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <input type="checkbox" class="checkbox" id="isHalfDayAllowed">
                     <label>Is Half Day Allow</label>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <input type="checkbox" class="checkbox" id="isBalanceCheck">
                     <label>Is Balance Check</label>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <input type="checkbox" class="checkbox" id="isOnlyOneTime">
                     <label>is Only One Time</label>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="form-group">
                     <input type="checkbox" class="checkbox" id="isRestrict">
                     <label>is Restrict</label>
