--- a/Demo.MenuLoad/Views/Home/Menu.cshtml
+++ b/Demo.MenuLoad/Views/Home/Menu.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Demo Leave";
 }
+<input type="hidden" id="leaveId" />
 
 <div class="box box-default">
     <div class="box-header with-border">
@@ -19,7 +20,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label>Leave</label>
-                    <select id="leaveDropdown" class="form-control selectpicker"></select>
+                    <select id="leaveDropdown" class="form-control"></select>
                 </div>
             </div>
             <div class="col-md-4">
@@ -73,10 +74,62 @@
         <button id="cancelButton" type="submit" class="btn btn-primary">Cancel</button>
     </div>
 </div>
+
+<div class="box box-default">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <h3 class="box-title"><i class="fa fa-list-alt"></i> Leave Entry List</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+            </div>
+            <!-- /.box-tools -->
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th class="hidden">id</th>
+                        <th>User Name</th>
+                        <th>Leave Type Name</th>
+                        <th>Date</th>
+                        <th>Leave Cause</th>
+                        <th>Leave Location</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th class="hidden">id</th>
+                        <th>User Name</th>
+                        <th>Leave Type Name</th>
+                        <th>Date</th>
+                        <th>Leave Cause</th>
+                        <th>Leave Location</th>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <!-- /.box-body -->
+    </div>
+    <!-- /.box DataTable -->
+</div>
 <!-- /.box -->
 @section scripts {
+    <!--DatePicker-->
     <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
     <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
+
+    <!--dataTables-->
+    @*<link href="~/Content/dataTables.bootstrap.min.css" rel="stylesheet" />
+        <script src="~/Scripts/jquery.dataTables.min.js"></script>
+        <script src="~/Scripts/dataTables.bootstrap.min.js"></script>
+        <script src="~/Scripts/dataTables.buttons.min.js"></script>*@
+
+    @Styles.Render("~/Content/datatables")
+    @Scripts.Render("~/bundles/datatables")
+
     <!--Controller-->
     <script src="~/Controllers/Scripts/leaveController.js"></script>
 
