loading dropdown at select problem soled

--- a/Demo.MenuLoad/Views/Leave/AdminLeave.cshtml
+++ b/Demo.MenuLoad/Views/Leave/AdminLeave.cshtml
@@ -101,6 +101,7 @@
                         <th class="hidden">id</th>
                         <th>User Name</th>
                         <th>Leave Type Name</th>
+                        <th>Leave Type Name</th>
                         <th>Date</th>
                         <th>Leave Cause</th>
                         <th>Leave Location</th>
@@ -111,6 +112,7 @@
                         <th class="hidden">id</th>
                         <th>User Name</th>
                         <th>Leave Type Name</th>
+                        <th>Leave Type Id</th>
                         <th>Date</th>
                         <th>Leave Cause</th>
                         <th>Leave Location</th>
