--- a/Demo.MenuLoad/Views/Leave/Index.cshtml
+++ b/Demo.MenuLoad/Views/Leave/Index.cshtml
@@ -92,8 +92,8 @@
                 <thead>
                     <tr>
                         <th class="hidden">id</th>
-                        <th>User Name</th>
                         <th>Leave Type Name</th>
+                        <th>LeaveTypeId</th>
                         <th>Date</th>
                         <th>Leave Cause</th>
                         <th>Leave Location</th>
@@ -102,8 +102,8 @@
                 <tfoot>
                     <tr>
                         <th class="hidden">id</th>
-                        <th>User Name</th>
                         <th>Leave Type Name</th>
+                        <th>LeaveTypeId</th>
                         <th>Date</th>
                         <th>Leave Cause</th>
                         <th>Leave Location</th>
