--- a/Demo.MenuLoad/Views/Home/SignIn.cshtml
+++ b/Demo.MenuLoad/Views/Home/SignIn.cshtml
@@ -3,14 +3,14 @@
 }
 <div class="login-box">
     <div class="login-logo">
-        <a href="../../index2.html"><b>Admin</b>LTE</a>
+        <a href="#"><b>Akij Development Architecture</b>(ADA)</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
         <p class="login-box-msg">Sign in to start your session</p>
 
         <div class="form-group has-feedback">
-            <input id="userName" type="text" class="form-control" placeholder="User Name">
+            <input id="userName" type="text" class="form-control" placeholder="User Name/Email">
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
