added dynamic name

--- a/Demo.MenuLoad/Views/Shared/_Header.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Header.cshtml
@@ -115,14 +115,15 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="~/Image/avatar.png" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Md. Yeasin Arafat</span>
+                        <span class="hidden-xs" id="userFullName"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
                             <img src="~/Image/avatar.png" class="img-circle" alt="User Image">
                             <p>
-                                Md. Yeasin Arafat - Software Developer
+                                <span id="userFullName2"></span> -
+                                <span id="userDesignation">Designation</span>
                                 <small>Member since April. 2018</small>
                             </p>
                         </li>
