--- a/Demo.MenuLoad/Views/Home/SignIn.cshtml
+++ b/Demo.MenuLoad/Views/Home/SignIn.cshtml
@@ -3,7 +3,7 @@
 }
 <div class="login-box">
     <div class="login-logo">
-        <a href="#"><b>Akij Development Architecture</b>(ADA)</a>
+        <a href="#"><b>ADA-ERP</b>(V2)</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
