--- a/Demo.MenuLoad/Views/Shared/_Header.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Header.cshtml
@@ -123,8 +123,8 @@
                             <img src="~/Image/avatar.png" class="img-circle" alt="User Image">
                             <p>
                                 <span id="userFullName2"></span> -
-                                <span id="userDesignation">Designation</span>
-                                <small>Member since April. 2018</small>
+                                <span id="userDesignation"></span>
+                                <small id="userDateOfJoining"></small>
                             </p>
                         </li>
                         <!-- Menu Body -->
@@ -145,7 +145,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                <a href="#" class="btn btn-default btn-flat" id="profileButton">Profile</a>
                             </div>
                             <div class="pull-right">
                                 <a href="#" class="btn btn-default btn-flat"  onclick="SignOut()">Sign out</a>
