--- a/Demo.MenuLoad/Views/Profile/Index.cshtml
+++ b/Demo.MenuLoad/Views/Profile/Index.cshtml
@@ -12,17 +12,17 @@
                 <h3 class="profile-username text-center" id="profileUserName"></h3>
                 <p class="text-muted text-center" id="profileDesignation"></p>
                 @*<ul class="list-group list-group-unbordered">
-                    <li class="list-group-item">
-                        <b>Followers</b> <a class="pull-right">1,322</a>
-                    </li>
-                    <li class="list-group-item">
-                        <b>Following</b> <a class="pull-right">543</a>
-                    </li>
-                    <li class="list-group-item">
-                        <b>Friends</b> <a class="pull-right">13,287</a>
-                    </li>
-                </ul>
-                <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>*@
+                        <li class="list-group-item">
+                            <b>Followers</b> <a class="pull-right">1,322</a>
+                        </li>
+                        <li class="list-group-item">
+                            <b>Following</b> <a class="pull-right">543</a>
+                        </li>
+                        <li class="list-group-item">
+                            <b>Friends</b> <a class="pull-right">13,287</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>*@
             </div>
             <!-- /.box-body -->
         </div>
@@ -65,63 +65,118 @@
             </ul>
             <div class="tab-content">
                 <div class="active tab-pane" id="information">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label">Name</label>
-                                <label class="control-label">Name</label>
-                            </div>
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Name</label>
+                            <label class="col-sm-9 control-label" id="nameLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Email</label>
+                            <label class="col-sm-9 control-label" id="emailLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Facebook</label>
+                            <label class="col-sm-9 control-label" id="facebookAddressLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Google</label>
+                            <label class="col-sm-9 control-label" id="googleAddressLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Designation</label>
+                            <label class="col-sm-9 control-label" id="designationLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Date of Joining</label>
+                            <label class="col-sm-9 control-label" id="dateOfJoiningLabel"style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Current Address</label>
+                            <label class="col-sm-9 control-label" id="currentAddressLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Parmanent Address</label>
+                            <label class="col-sm-9 control-label" id="parmanentAddressLabel"style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Education</label>
+                            <label class="col-sm-9 control-label" id="educationLabel" style="text-align: left"></label>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Note</label>
+                            <label class="col-sm-9 control-label" id="noteLabel" style="text-align: left"></label>
                         </div>
                     </div>
                 </div>
                 <!-- /.tab-pane -->
                 <div class="tab-pane" id="settings">
-                    <form class="form-horizontal">
+                    <div class="form-horizontal">
                         <div class="form-group">
-                            <label for="inputName" class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputName" placeholder="Name">
+                            <label class="col-sm-3 control-label">Name</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="nameTextBox" placeholder="Name">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                            <label class="col-sm-3 control-label">Email</label>
+                            <div class="col-sm-9">
+                                <input type="email" class="form-control" id="emailTextBox" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputName" class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputName" placeholder="Name">
+                            <label class="col-sm-3 control-label">Facebook Address</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="facebookAddressTextBox" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputExperience" class="col-sm-2 control-label">Experience</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
+                            <label class="col-sm-3 control-label">Google Address</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="googleAddressTextBox" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputSkills" class="col-sm-2 control-label">Skills</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
+                            <label class="col-sm-3 control-label">Designation</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="designationTextBox" placeholder="Designation">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
-                                    </label>
-                                </div>
+                            <label class="col-sm-3 control-label">Date of Joining</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="dateOfJoiningTextBox" placeholder="Date of Joining">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-danger">Submit</button>
+                            <label class="col-sm-3 control-label">Current Address</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="currentAddressTextBox" placeholder="Current Address">
                             </div>
                         </div>
-                    </form>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Parmanent Address</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="parmanentAddressTextBox" placeholder="Parmanent Address">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Education</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="educationTextBox" placeholder="Education">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Note</label>
+                            <div class="col-sm-9">
+                                <textarea type="text" class="form-control" id="noteTextBox" placeholder="Note"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-9">
+                                <button type="submit" class="btn btn-danger" id="submitButton">Update</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- /.tab-pane -->
             </div>
@@ -134,7 +189,7 @@
 
 @section scripts {
     <!--DatePicker-->
-    <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet"/>
+    <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
     <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
 
     <script src="~/Controllers/Scripts/profileController.js"></script>
