meal db added to our database

--- a/Demo.MenuLoad/Views/Shared/_Header.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
 ﻿<header class="main-header">
     <!-- Logo -->
-    <a href="@Url.Action("Index", "home")" class="logo">
+    <a href="#" class="logo home" >
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <div class="logo-mini logo-image-mini">
             <img class="logo-image" src="~/Image/logo.png" alt="logo">
