--- a/Demo.MenuLoad/Views/Shared/_Layout.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_Layout.cshtml
@@ -331,6 +331,9 @@
             $('#profileButton').click(function () {
                 window.location.href = "../Profile/Index?token=" + token;
             });
+            $('.home').click(function () {
+                window.location.href = "../Home/Index?token=" + token;
+            });
 
         });
     </script>
