--- a/Demo.MenuLoad/Views/Profile/Index.cshtml
+++ b/Demo.MenuLoad/Views/Profile/Index.cshtml
@@ -74,14 +74,14 @@
                             <label class="col-sm-3 control-label">Email</label>
                             <label class="col-sm-9 control-label" id="emailLabel" style="text-align: left"></label>
                         </div>
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <label class="col-sm-3 control-label">Facebook</label>
                             <label class="col-sm-9 control-label" id="facebookAddressLabel" style="text-align: left"></label>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">Google</label>
                             <label class="col-sm-9 control-label" id="googleAddressLabel" style="text-align: left"></label>
-                        </div>
+                        </div>*@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">Designation</label>
                             <label class="col-sm-9 control-label" id="designationLabel" style="text-align: left"></label>
@@ -123,7 +123,7 @@
                                 <input type="email" class="form-control" id="emailTextBox" placeholder="Email">
                             </div>
                         </div>
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <label class="col-sm-3 control-label">Facebook Address</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" id="facebookAddressTextBox" placeholder="Email">
@@ -134,7 +134,7 @@
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" id="googleAddressTextBox" placeholder="Email">
                             </div>
-                        </div>
+                        </div>*@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">Designation</label>
                             <div class="col-sm-9">
