--- a/Demo.MenuLoad/Views/Shared/_LeftSideBar.cshtml
+++ b/Demo.MenuLoad/Views/Shared/_LeftSideBar.cshtml
@@ -26,7 +26,7 @@
         <ul id="sidebarMenu" class="sidebar-menu" data-widget="tree">
             <li class="header">MAIN NAVIGATION</li>
         <li class="treeview">
-            <a href="../Home/Index.cshtml">
+            <a href="#" class="home">
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span>
             </a>
         </li>
