--- a/Demo.MenuLoad/Views/Home/Index.cshtml
+++ b/Demo.MenuLoad/Views/Home/Index.cshtml
@@ -30,6 +30,7 @@
             <div class="info-box-content box-content-center">
                 <span class="info-box-number">Todays Meal</span>
                 <span class="info-box-text"><small id="mealSpan">Meal</small></span>
+                <span class="info-box-text"><small id="altMealSpan">AltMeal</small></span>
             </div>
             <!-- /.info-box-content -->
         </div>
