added task load

--- a/Demo.MenuLoad/Views/Home/Index.cshtml
+++ b/Demo.MenuLoad/Views/Home/Index.cshtml
@@ -336,5 +336,6 @@
     <script src="~/Scripts/dashboard.js"></script>
 
     <script src="~/Controllers/Scripts/mealController.js"></script>
+    <script src="~/Controllers/Scripts/taskController.js"></script>
 
 }
