complete attendance report

--- a/Demo.MenuLoad/Views/Home/Index.cshtml
+++ b/Demo.MenuLoad/Views/Home/Index.cshtml
@@ -41,8 +41,11 @@
         <div class="info-box">
             <span class="info-box-icon bg-blue"><i class="fa fa-address-card"></i></span>
             <div class="info-box-content box-content-center">
-                <span class="info-box-number">Attendance Details</span>
-                <span class="info-box-text"><small>Daily Attendance (Calender View)</small></span>
+                <span class="info-box-number">Attendance Details 
+                    <input class="btn btn-primary btn-sm pull-right" src="../Attendance/Index.cshtml" type="button" value="Show" />
+                </span>
+                <span class="info-box-text"><small>Daily Attendance (Details View)</small></span>
+                
             </div>
             <!-- /.info-box-content -->
         </div>
